--- a/Index.html
+++ b/Index.html
@@ -63,10 +63,10 @@
         <h1>Clínica de Especialidades Médicas</h1>
     </header>
     <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Servicios</a>
-        <a href="#">Especialidades</a>
-        <a href="#">Contacto</a>
+        <a href="Index.">Inicio</a>
+        <a href="servicios.html">Servicios</a>
+        <a href="especialidades.html">Especialidades</a>
+        <a href="contacto.html">Contacto</a>
     </nav>
     <section>
         <h2>Bienvenido a nuestra clínica de especialidades médicas</h2>
